<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAquaDark"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:background="@drawable/basket"
            android:layout_marginLeft="20dp"
            android:paddingBottom="50dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/bmicircle"
                android:layout_height="150dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/bmi"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:paddingTop="20dp"
                    android:textSize="30sp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/bmi_Result"
                    android:text="@string/_00"
                    android:layout_gravity="center"
                    android:textSize="50sp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:id="@+id/bmiDescription"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/description"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="match_parent"
                android:id="@+id/bmi_healthRisk"
                android:text="@string/health_risk"
                android:layout_margin="10dp"
                android:textStyle="italic"
                android:textAlignment="center"
                android:layout_height="50dp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:paddingBottom="20dp"
                            android:layout_height="wrap_content">


                        <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:layout_height="wrap_content">
                            <ImageView
                                    android:layout_width="30dp"
                                    android:src="@drawable/negative_icon"
                                    android:id="@+id/weight_minus"
                                    android:layout_height="35dp"/>


                            <TextView
                                    android:text="@string/weight_kg"
                                    android:textSize="15sp"
                                    android:gravity="center"
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"/>

                            <ImageView
                                    android:layout_width="30dp"
                                    android:src="@drawable/positive_icon"
                                    android:id="@+id/weight_plus"
                                    android:layout_height="35dp"/>


                        </LinearLayout>



                        <TextView
                                android:text="@string/_00"
                                android:id="@+id/bmi_weight"
                                android:textSize="20sp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_height="match_parent">


                        <SeekBar
                                android:layout_width="match_parent"
                                android:id="@+id/seekbar_weight"
                                android:min="3"
                                android:max="640"
                                android:layout_height="wrap_content"/>



                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="vertical"
                            android:paddingBottom="20dp"
                            android:layout_height="wrap_content">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:layout_height="wrap_content">

                            <ImageView
                                    android:layout_width="30dp"
                                    android:src="@drawable/negative_icon"
                                    android:id="@+id/height_minus"
                                    android:layout_height="35dp"/>

                            <TextView
                                    android:text="Height(cm)"
                                    android:textSize="15dp"
                                    android:gravity="center"
                                    android:layout_width="160dp"
                                    android:layout_height="wrap_content"/>

                            <ImageView
                                    android:layout_width="30dp"
                                    android:src="@drawable/positive_icon"
                                    android:id="@+id/height_plus"
                                    android:layout_height="35dp"/>

                        </LinearLayout>


                        <TextView
                                android:text="00"
                                android:id="@+id/bmi_height"
                                android:textSize="20dp"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:gravity="center"
                            android:layout_height="match_parent">

                        <SeekBar
                                android:layout_width="match_parent"
                                android:id="@+id/seekbar_height"
                                android:min="48"
                                android:max="251"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>



    </LinearLayout>

</ScrollView>